Fixed CSS (scoll on comments, visible on optionsmenu)

--- a/src/components/post/style.css
+++ b/src/components/post/style.css
@@ -6,7 +6,7 @@
 
 .post-comments {
   max-height: 400px;
-  overflow-y: visible;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
 }
